<resources>
    <string name="app_name">FireChat</string>
    <string name="reg_a_new_acc">SignUP</string>
    <string name="auth_failed">authFailed plz try again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="getPair">qen0001</string>
    <string name="getPairPref">qen0002</string>
    <string name="getImgUri">qen0003</string>
    <string name="getImgUri01">qen0004</string>
    <string name="getImgUri02">qen0005</string>
    <!--     chat room flags      -->
    <string name="getImgUri03">qen0006</string>
    <string name="getImgUri04">qen0007</string>
    <string name="getImgUri05">qen0008</string>
    <string name="ChatserviceListnerString">qen0009</string>
    <string name="getPairPrefKEY">qen00010</string>
    <string name="getPairPrefKEYIntent">qen00011</string>
    <!-- intent tags -->
    <string name="selectPhotoIntent">1000</string>
    <string name="uBloodwallpaperServiceintent">1001</string>
    <string name="uBloodwallpaperServiceintentFlag">1002</string>
    <string name="getPairPrefKEYExtras">1003</string>
    <!--                                                          -->
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="add">Add</string>
    <string name="Wake_up">Wake_up</string>
    <string name="spinner_title">pickStatus</string>
    <string name="title_activity_wake__up__activity">WAKE_UP_ACTIVITY</string>
    <!-- -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CANCEL_FRIEND_REQUEST">CANCEL FRIEND REQUEST</string>
    <string name="ACCEPT_FRIEND_REQUEST">ACCEPT FRIEND REQUEST</string>
    <string name="chat">Messege</string>
    <string name="alpha">alphaRoom</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="LOADING">Loading</string>
    <string name="PLEASEWAIT">please wait...</string>
    <string name="DEFAULT_STATUS">Hi there!Iam Using MyChatApp</string>
    <string name="SOMTHING_WRONG">something wrong plz try again</string>
    <string name="WELCOME">welcome</string>
    <string name="UNFRIEND">unfriend</string>
    <string name="REQ_SEND">SEND REQUEST</string>
    <string name="FAIL_GETIMG">Faild to get img</string>
    <string name="ENTERURSTATUS">Enter Your Status:</string>
    <string name="CHANGE_STATUS">Change Status</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="profileIMG">profile image</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="DECLINE">decline</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="user_name">User Name</string>
    <string name="email">email</string>
    <string name="pass">password</string>
    <string name="create">create</string>
    <string name="display_name">Display Name</string>
    <string name="changeimage">changeImage</string>
    <string name="changestatus">changestatus</string>
    <string name="welcome_to_mychatapp">Welcome to MyChatApp</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="arrow_right">arrow_right</string>
    <string name="string_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example">string/android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example</string>
    <string name="string_arrowleft">arrow_left</string>
    <string name="string_">string/android_charting_application_xml_ui_design_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_android_charting_application_xml_ui_design</string>
    <string name="string_http_eccoo">string/http_eccooookkpo</string>
    <string name="string_text1">string/text1</string>
    <string name="string_http">string/http</string>
    <string name="string_text2">string_text2</string>
    <string name="image">prof_img</string>
    <string name="settings">Settings</string>
    <string name="all_user">All User</string>
    <string name="logout">logout</string>
    <string name="NOP">NO USER</string>
    <string name="NOP2">NO Status</string>
    <string name="NOP3">BLow</string>
    <string name="et0">eTa0</string>
    <string name="et1">eTa1</string>
    <string name="et2">eTa2</string>
    <string name="loginactivity">LoginActivity</string>
    <string name="aemail">Email</string>
    <string name="password">Password</string>
    <string name="logina">Login</string>
    <string name="request_page">Request Page</string>
</resources>
