<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mayman.finalchat.ProfileActivity">

    <ImageView
        android:id="@+id/imageView_profileActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true"
        app:srcCompat="@drawable/profile_img"
        android:contentDescription="@string/profileIMG" />

    <TextView
        android:id="@+id/textView_name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="@dimen/name_siz"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_status_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_name_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/status"
        android:textSize="@dimen/decline_size" />

    <Button
        android:id="@+id/button_sendReq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_status_profile"
        android:layout_marginTop="34dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/REQ_SEND"
        android:textSize="@dimen/decline_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_declineReq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/DECLINE"
        android:textSize="@dimen/decline_size"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>
