<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_gravity="center_horizontal"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:fitsSystemWindows="true"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_img"
        android:contentDescription="@string/add_widget" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="72dp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


</LinearLayout>