<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/chatapp_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_startActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/welcome_to_mychatapp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.326" />

    <Button
        android:id="@+id/reg_button_id"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="top|end"
        android:layout_marginBottom="34dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_anchor="@+id/imageView"
        app:layout_anchorGravity="bottom|left"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toLeftOf="@+id/login_button_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_startActivity"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/login_button_id"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="34dp"
        android:layout_marginRight="17dp"
        android:text="@string/login"
        app:layout_anchor="@+id/imageView"
        app:layout_anchorGravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView" />


</android.support.constraint.ConstraintLayout>
